@@ -1,6 +1,9 @@
 2019-09-18 Wiley E. Hill <wileyhill@gmail.com>
 
-    * src/gtksheet/gtksheet.c: Simplfy gtk_sheet_get_entry.
+    * src/gtksheet/gtksheet.c: Simplfy gtk_sheet_get_entry. Conditionally
+      compile calls to GDK_THREADS_ENTER and GDK_THREADS_LEAVE in function
+      gtk_sheet_flash and _gtk_sheet_scroll_to_pointer.
+
 
     * src/gattrib.c: Replace gdk_set_locale with setlocale to initialize
       the locale based on environment variables.
